--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node --watch src/app.js",
     "start2": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "mocha test/supertest.test.js"
+    "test": "mocha src/test/*.test.js"
   },
   "keywords": [],
   "author": "",
@@ -22,11 +22,13 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "multer": "^1.4.5-lts.1",
-    "supertest": "^6.3.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "mocha": "^10.1.0"
+    "chai": "^4.5.0",
+    "mocha": "^10.8.2",
+    "supertest": "^7.0.0"
   }
 }
