--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node --watch src/app.js",
     "start2": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "mocha src/test/*.test.js"
+    "test": "mocha src/test/*.test.js --timeout 15000 --exit"
   },
   "keywords": [],
   "author": "",
